<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender_dark_background"
    android:padding="32dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_app_logo_purple"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/app_logo_description" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginLogo"
        android:layout_marginBottom="16dp"
        android:hint="@string/login_hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#A09DB1"
        android:backgroundTint="@color/white" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginBottom="24dp"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#A09DB1"
        android:backgroundTint="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:text="@string/login_button_login"
        android:backgroundTint="@color/accent_yellow"
        android:textColor="@color/darker_purple"
        app:cornerRadius="16dp"
        android:paddingVertical="14dp"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/login_text_register"
        android:textColor="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"/>

</RelativeLayout>